--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.22-alpine3.19
 WORKDIR /app
 
 COPY ./ ./
-RUN go build -o ./main ./cmd/server/main.go
+RUN go build -o ./main ./cmd/server
 
 EXPOSE 8080
 CMD ["./main"]
